# blogpost-py

./: .gitignore  .pylintrc  Procfile  pyproject.toml  requirements.txt
blogpost/: bot.py  config.py  regional_indicator.py  symbol_letter.py
tests/: test_blogpost.py
