[tool.poetry]
name = "blogpost"
version = "0.1.0"
description = ""
authors = ["88IO"]

[tool.poetry.dependencies]
python = "^3.9"
"discord.py" = "^1.6.0"
tweepy = "^3.10.0"
python-dotenv = "^0.16.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jedi = "^0.18.0"
pylint = "^2.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bot = "blogpost.bot:main"
